# simconnect-H

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: cookbook.md  simconnect-h-contribution.md
docs/en/: README.md  api.md  architecture.md  cli.md  cookbook.md  quickstart.md
examples/: 01_quickstart.py  async_quickstart.py  diagnose_read.py  fastapi_telemetry.py  install_and_test.bat  read_strings.py  read_write.py  send_events.py  stress_subscribe.py  stress_subscribe_weather.py
scripts/: build_catalog.py  build_portable.ps1  copy_simconnect_dll.ps1  debug_audit.py
simconnect_native/: __init__.py  asyncio.py  cli.py  client.py  constants.py  dll.py  errors.py  events.py  fields.py  lifecycle.py  parsing.py  registry.py  structures.py  subscribe.py  sync_io.py  system_events.py  utils.py  weather.py  write_queue.py
simconnect_native/data/: common_events.json  common_simvars.json
simconnect_native/lib/: README.txt
tests/: test_audit_hidden_bugs.py  test_dispatch_lifecycle.py  test_dll.py  test_fastapi_example.py  test_lifecycle.py  test_parsing.py  test_simconnect_native.py  test_structures.py  test_subscribe.py  test_sync_io.py  test_system_events.py  test_v061_features.py  test_weather_lifecycle.py  test_write_queue.py
