[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "simconnect-H"
version = "0.3.1"
description = "原生 ctypes SimConnect 库 — 零外部依赖，直接加载 SimConnect.dll 与 MSFS 通讯"
readme = "README.md"
license = "MIT"
authors = [
    {name = "HuJie", email = "150501351+hjznb887@users.noreply.github.com"},
]
keywords = ["simconnect", "msfs", "flight-simulator", "ctypes", "native"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Simulation",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/hjznb887/simconnect-H"
Repository = "https://github.com/hjznb887/simconnect-H"

[tool.setuptools.packages.find]
include = ["simconnect_native*"]
