[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "simconnect-H"
version = "0.6.2"
description = "Native ctypes SimConnect for MSFS — zero runtime deps. Read/write SimVars, batch subscribe, events, auto-reconnect, CLI."
readme = "README.md"
license = "MIT"
authors = [
    {name = "HuJie", email = "150501351+hjznb887@users.noreply.github.com"},
]
keywords = ["simconnect", "msfs", "flight-simulator", "ctypes", "native"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Simulation",
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
simconnect-h = "simconnect_native.cli:main"

[project.urls]
Homepage = "https://github.com/hjznb887/simconnect-H"
Repository = "https://github.com/hjznb887/simconnect-H"

[tool.setuptools.packages.find]
include = ["simconnect_native*"]

[tool.setuptools.package-data]
simconnect_native = ["lib/*", "data/*"]
